--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,62 @@ a {
     background: black;
   }
 }
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-slide picture {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+  width: auto !important;
+  height: 60px !important;
+  opacity: 1 !important;
+  background: white !important;
+  border-radius: 0px !important;
+  padding: 20px 20px 20px 20px;
+  font-weight: 700 !important;
+  color: #736D6D;
+
+}
+
+
+.swiper-pagination-bullet-active {
+  background: #EA3236 !important;
+  color: white !important;
+  padding-top: 20px;
+}
